--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
+<!DOCTYPE html>
 <html>
-    <head>
+
+<head>
+    <title>Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
+</head>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+<body>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+    <div class="maindiv">
+        <div id="content-wrapper">
+            <h1>Simple Interest Calculator</h1>
+            <div id="calculations">
+                <div class="row">
+                    <div id="col">
+                        <a class="my_label">Amount</a><br><br />
+                        <a class="my_label">Interest Rate</a><br><br />
+                        <a class="my_label">No. of Years</a><br><br />
+                    </div>
+                    <div>
+                        <input type="number" id="principal"> <br /><br />
+
+                        <input type="range" id="rate" min="1" max="20"
+                         step="0.25" value="10.25" onchange="updateRate()"><br /><br />
+
+                        <select id="years">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
+
+                        <span id="rate_val">
+                            10.25%
+                        </span>
+                        <br /><br />
+                    </div>
+                </div>
+
+                <span id="result">
+                    <a> If you deposit </a> <a id = "result_deposit" class = "highlight">1000000</a><br />
+                    <a> at an interest rate of </a> <a id = "result_rate" class = "highlight">3.5%</a><br />
+                    <a> you will receive an amount of </a> <a id = "result_amount" class = "highlight">175000</a><br />
+                    <a> in the year </a> <a id = "result_year" class = "highlight">2025</a><br />
+                </span><br>
+
+                <button onclick="compute()">Compute Interest</button>
+            </div>
+
+            <h3>© Everyone can get rich</h3>
+        </div>
+    </div>
+
+    <footer>
+
+        &#169; This Calculator belongs to Andrii Provozin
+
+    </footer>
+
+</body>
+
 </html>
